# goit-web_hw-module-8

./: .gitignore  app_cli.py  app_crud_cli.py  models.py  pyproject.toml
1_hello_world/: consumer.py  producer.py
1_task/: app.py  decorators.py  models.py
1_task/conf/: config.ini  connect.py
1_task/seeds/: authors.json  authors_test.json
2_task/: consumer.py  consumer_email.py  consumer_sms.py  model.py  producer.py
2_task/conf/: connect.py
3_pub-sub/: consumer.py  producer.py
conf/: connect.py
